ensure that header text does not overlap with arrow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -436,6 +436,10 @@ i.fa.fa-cart-plus {
     color: #ccc;
 }
 
+#course-table_wrapper .th-text {
+    margin-right: 10px;
+}
+
 #course-table_wrapper div.toolbar {
     display: inline-block;
 }
